--- a/ErrorsExceptions/SpreadsheetCalculation/Spreadsheet Calculation.xaml
+++ b/ErrorsExceptions/SpreadsheetCalculation/Spreadsheet Calculation.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:si="clr-namespace:System.IO;assembly=mscorlib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="in_Workbook" Type="InArgument(x:String)" />
     <x:Property Name="in_Sheetname" Type="InArgument(x:String)" />
@@ -12,7 +12,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1051,1718</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1051,1116</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="30">
@@ -71,7 +71,7 @@
       <AssemblyReference>UiPath.Excel</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="automate the calculation of the difference between two fields in an Excel file (Cash In and Cash Out) and input it in the third column" DisplayName="Spreadsheet Calculation" sap:VirtualizedContainerService.HintSize="791,1553" sap2010:WorkflowViewState.IdRef="Sequence_4">
+  <Sequence sap2010:Annotation.AnnotationText="automate the calculation of the difference between two fields in an Excel file (Cash In and Cash Out) and input it in the third column" DisplayName="Spreadsheet Calculation" sap:VirtualizedContainerService.HintSize="376,951" sap2010:WorkflowViewState.IdRef="Sequence_4">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="cashFlowTable" />
     </Sequence.Variables>
@@ -81,60 +81,14 @@
         <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <TryCatch DisplayName="Try to read excel file" sap:VirtualizedContainerService.HintSize="749,341" sap2010:WorkflowViewState.IdRef="TryCatch_1">
-      <sap:WorkflowViewStateService.ViewState>
-        <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-          <x:Boolean x:Key="IsPinned">False</x:Boolean>
-        </scg:Dictionary>
-      </sap:WorkflowViewStateService.ViewState>
-      <TryCatch.Try>
-        <ui:ReadRange Range="{x:Null}" AddHeaders="True" DataTable="[cashFlowTable]" DisplayName="Read Range" sap:VirtualizedContainerService.HintSize="334,88" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="[in_Sheetname]" WorkbookPath="[in_Workbook]" />
-      </TryCatch.Try>
-      <TryCatch.Catches>
-        <Catch x:TypeArguments="si:IOException" sap:VirtualizedContainerService.HintSize="404,26" sap2010:WorkflowViewState.IdRef="Catch`1_1">
-          <sap:WorkflowViewStateService.ViewState>
-            <scg:Dictionary x:TypeArguments="x:String, x:Object">
-              <x:Boolean x:Key="IsExpanded">False</x:Boolean>
-              <x:Boolean x:Key="IsPinned">False</x:Boolean>
-            </scg:Dictionary>
-          </sap:WorkflowViewStateService.ViewState>
-          <ActivityAction x:TypeArguments="si:IOException">
-            <ActivityAction.Argument>
-              <DelegateInArgument x:TypeArguments="si:IOException" Name="exception" />
-            </ActivityAction.Argument>
-            <Sequence sap:VirtualizedContainerService.HintSize="376,470" sap2010:WorkflowViewState.IdRef="Sequence_1">
-              <sap:WorkflowViewStateService.ViewState>
-                <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                  <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-                </scg:Dictionary>
-              </sap:WorkflowViewStateService.ViewState>
-              <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,102" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Error" Message="[&quot;The file cannot be read. Attempting to close&quot;]" />
-              <ui:CloseApplication DisplayName="Close Application 'Excel  Practice1'" sap:VirtualizedContainerService.HintSize="334,107" sap2010:WorkflowViewState.IdRef="CloseApplication_1">
-                <ui:CloseApplication.Target>
-                  <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="3b668086-73f7-43d9-92ce-d6c8212fd571" InformativeScreenshot="af446fa74b0d544f0d244ffaf26e1bb9" Selector="&lt;wnd app='excel.exe' cls='XLMAIN' title='Practice1.xlsx - Excel' /&gt;">
-                    <ui:Target.TimeoutMS>
-                      <InArgument x:TypeArguments="x:Int32" />
-                    </ui:Target.TimeoutMS>
-                    <ui:Target.WaitForReady>
-                      <InArgument x:TypeArguments="ui:WaitForReady" />
-                    </ui:Target.WaitForReady>
-                  </ui:Target>
-                </ui:CloseApplication.Target>
-              </ui:CloseApplication>
-              <ui:ReadRange Range="{x:Null}" AddHeaders="True" DataTable="[cashFlowTable]" DisplayName="Read Range" sap:VirtualizedContainerService.HintSize="334,88" sap2010:WorkflowViewState.IdRef="ReadRange_2" SheetName="CashFlow" WorkbookPath="[in_Workbook]" />
-            </Sequence>
-          </ActivityAction>
-        </Catch>
-      </TryCatch.Catches>
-    </TryCatch>
-    <ui:ForEachRow CurrentIndex="{x:Null}" DataTable="[cashFlowTable]" DisplayName="For Each Row" sap:VirtualizedContainerService.HintSize="749,871" sap2010:WorkflowViewState.IdRef="ForEachRow_1">
+    <ui:ReadRange Range="{x:Null}" AddHeaders="True" DataTable="[cashFlowTable]" DisplayName="Read Excel Data into data table" sap:VirtualizedContainerService.HintSize="334,88" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="[in_Sheetname]" WorkbookPath="[in_Workbook]" />
+    <ui:ForEachRow CurrentIndex="{x:Null}" DataTable="[cashFlowTable]" DisplayName="For Each Row in data atble" sap:VirtualizedContainerService.HintSize="334,502" sap2010:WorkflowViewState.IdRef="ForEachRow_1">
       <ui:ForEachRow.Body>
         <ActivityAction x:TypeArguments="sd:DataRow">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="sd:DataRow" Name="row" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="699,713" sap2010:WorkflowViewState.IdRef="Sequence_3">
+          <Sequence DisplayName="calculate difference" sap:VirtualizedContainerService.HintSize="242,344" sap2010:WorkflowViewState.IdRef="Sequence_3">
             <Sequence.Variables>
               <Variable x:TypeArguments="x:Int32" Name="cashOut" />
               <Variable x:TypeArguments="x:Int32" Name="cashIn" />
@@ -145,7 +99,7 @@
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <TryCatch DisplayName="convert Cash out" sap:VirtualizedContainerService.HintSize="657,57" sap2010:WorkflowViewState.IdRef="TryCatch_2">
+            <TryCatch DisplayName="convert Cash out" sap:VirtualizedContainerService.HintSize="200,57" sap2010:WorkflowViewState.IdRef="TryCatch_2">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -194,7 +148,7 @@
                 </Catch>
               </TryCatch.Catches>
             </TryCatch>
-            <TryCatch DisplayName="convert Cash In" sap:VirtualizedContainerService.HintSize="657,57" sap2010:WorkflowViewState.IdRef="TryCatch_3">
+            <TryCatch DisplayName="convert Cash In" sap:VirtualizedContainerService.HintSize="200,57" sap2010:WorkflowViewState.IdRef="TryCatch_3">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -243,15 +197,21 @@
                 </Catch>
               </TryCatch.Catches>
             </TryCatch>
-            <If Condition="[status Is Nothing]" sap:VirtualizedContainerService.HintSize="657,426" sap2010:WorkflowViewState.IdRef="If_1">
+            <If Condition="[status Is Nothing]" DisplayName="Check for status" sap:VirtualizedContainerService.HintSize="200,57" sap2010:WorkflowViewState.IdRef="If_1">
+              <sap:WorkflowViewStateService.ViewState>
+                <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                  <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                  <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                </scg:Dictionary>
+              </sap:WorkflowViewStateService.ViewState>
               <If.Then>
-                <Sequence sap:VirtualizedContainerService.HintSize="306,263" sap2010:WorkflowViewState.IdRef="Sequence_7">
+                <Sequence DisplayName="Status is Nothing" sap:VirtualizedContainerService.HintSize="306,263" sap2010:WorkflowViewState.IdRef="Sequence_7">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <Assign sap:VirtualizedContainerService.HintSize="264,65" sap2010:WorkflowViewState.IdRef="Assign_5">
+                  <Assign DisplayName="Calculate difference" sap:VirtualizedContainerService.HintSize="264,65" sap2010:WorkflowViewState.IdRef="Assign_5">
                     <Assign.To>
                       <OutArgument x:TypeArguments="x:Object">[row("Difference")]</OutArgument>
                     </Assign.To>
@@ -259,7 +219,7 @@
                       <InArgument x:TypeArguments="x:Object">[(cashOut - cashIn).ToString]</InArgument>
                     </Assign.Value>
                   </Assign>
-                  <Assign sap:VirtualizedContainerService.HintSize="264,65" sap2010:WorkflowViewState.IdRef="Assign_6">
+                  <Assign DisplayName="Status is Success" sap:VirtualizedContainerService.HintSize="264,65" sap2010:WorkflowViewState.IdRef="Assign_6">
                     <Assign.To>
                       <OutArgument x:TypeArguments="x:Object">[row("Status")]</OutArgument>
                     </Assign.To>
@@ -270,13 +230,13 @@
                 </Sequence>
               </If.Then>
               <If.Else>
-                <Sequence sap:VirtualizedContainerService.HintSize="306,263" sap2010:WorkflowViewState.IdRef="Sequence_8">
+                <Sequence DisplayName="Status is not nothing" sap:VirtualizedContainerService.HintSize="306,263" sap2010:WorkflowViewState.IdRef="Sequence_8">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <Assign sap:VirtualizedContainerService.HintSize="264,65" sap2010:WorkflowViewState.IdRef="Assign_7">
+                  <Assign DisplayName="Difference can't be calculated" sap:VirtualizedContainerService.HintSize="264,65" sap2010:WorkflowViewState.IdRef="Assign_7">
                     <Assign.To>
                       <OutArgument x:TypeArguments="x:Object">[row("Difference")]</OutArgument>
                     </Assign.To>
@@ -284,7 +244,7 @@
                       <InArgument x:TypeArguments="x:Object">["N/A"]</InArgument>
                     </Assign.Value>
                   </Assign>
-                  <Assign sap:VirtualizedContainerService.HintSize="264,65" sap2010:WorkflowViewState.IdRef="Assign_8">
+                  <Assign DisplayName="Status is an error from above" sap:VirtualizedContainerService.HintSize="264,65" sap2010:WorkflowViewState.IdRef="Assign_8">
                     <Assign.To>
                       <OutArgument x:TypeArguments="x:Object">[row("Status")]</OutArgument>
                     </Assign.To>
@@ -299,6 +259,6 @@
         </ActivityAction>
       </ui:ForEachRow.Body>
     </ui:ForEachRow>
-    <ui:WriteRange AddHeaders="True" DataTable="[cashFlowTable]" DisplayName="Write Range" sap:VirtualizedContainerService.HintSize="749,116" sap2010:WorkflowViewState.IdRef="WriteRange_1" SheetName="[in_Sheetname]" StartingCell="A1" WorkbookPath="[in_Workbook]" />
+    <ui:WriteRange AddHeaders="True" DataTable="[cashFlowTable]" DisplayName="Write datatable to excel with difference and status values" sap:VirtualizedContainerService.HintSize="334,116" sap2010:WorkflowViewState.IdRef="WriteRange_1" SheetName="[in_Sheetname]" StartingCell="A1" WorkbookPath="[in_Workbook]" />
   </Sequence>
 </Activity>
